[project]
name = 'django-seeding'
version = '1.3.4'
description = 'Simple Django Package that helps developer to seed data from files and codes into the database automatically'
readme = "README.md"
authors = [
  { name="Suliman Awad", email="sulimanawadstudy@gmail.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Framework :: Django",
]

[project.urls]
"Source" = "https://github.com/suliman-99/django-seeding"
"Contributors" = "https://github.com/suliman-99/django-seeding/graphs/contributors"
"License" = "https://github.com/suliman-99/django-seeding/blob/main/LICENSE"
"Issues" = "https://github.com/suliman-99/django-seeding/issues"
